fix: progressbar #12